maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: value Sud is not a member of object plm.universe.Direction
    if (peutAllerNord() && getDirection != Direction.Sud) {
                                                     ^